public/app/praiseprojector.css
/* ... */
.mainTable {
    position: fixed;
    display: flex;
    left: 8px;
    top: 8px;
    width: calc(100% - 16px);
    height: calc(100% - 16px);
    transition: 0.5s;
}

.mainTable div {
    display: flex;
    justify-content: space-between;
    font-family: math;
    position: relative;
}

.mainTable div div {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    width: 2em;
    background-position: center;
    width: max-content;
    min-width: 2em;
}

.mainTable select {
    opacity: 0;
    width: 2em;
    position: fixed;
    cursor: pointer;
}

.mainTable span {
    font-size: 2em;
}

#iconTranspose {
    position: fixed;
}

.editor {
    position: absolute;
    overflow: hidden;
    outline: none !important;
    background-color: white;
    text-align: center;
}

.editor.dark {
    background-color: black;
}

.editor.editMode {
    max-width: 100%;
    max-height: none;
    width: unset;
    height: unset !important;
}

.editor.editMode > canvas {
    max-width: unset;
    max-height: unset;
}

.editorContainer {
    overflow: hidden;
}

.editorContainer.editMode {
    overflow: auto;
}

#preview {
    position: absolute;
    overflow: hidden scroll;
    outline: none !important;
    text-align: center;
    width: 85%;
    height: 75%;
    left: 50%;
    top: 65%;
    transform: translate(-50%, -65%);
    z-index: 110;
    padding: 0.5em;
    border: 0.5em solid transparent;
    border-radius: 0.5em;
    margin: 1em 0;    
    background: 
    linear-gradient(white 0 0) padding-box,
    linear-gradient(-15deg, #555, #aaa) border-box;
}

#preview.dark {
    background: 
    linear-gradient(black 0 0) padding-box,
    linear-gradient(-15deg, #555, #aaa) border-box;
}

.chordpro-editor-canvas {
    max-width: 100%;
    display: inline-block;
    margin: 0px auto;
    vertical-align: middle;
}

.chordpro-preview-canvas {
    max-width: 100%;
    display: inline-block;
    margin: 0px auto;
    vertical-align: middle;
    pointer-events: none;
}

#swipe-handler {
    z-index: 50;
    width: 100%;
    height: 100%;
    -webkit-perspective: 1000vw;
    perspective: 1000vw;
    -webkit-transform-style: preserve-3d;
    transform-style: preserve-3d;    
    perspective-origin: 50vw 50vh;
}

#swipe-handler div {
    position: absolute;
    width: 100%;    
    height: 100%;
    background-color: white;
}

#swipe-handler div.dark {
    background-color: black;
}

.transposeColumn {
    background-image: url(images/transpose.svg);
    background-repeat: no-repeat;
    background-size: 1em;
    background-position: right;
    filter: invert(1);
    overflow-x: hidden;
    min-width: 1em;
}

.transposeColumn > span {
    color: black;
    min-width: 1em;
    min-height: 1.2em;
}

.transposeColumn > select {
    background: transparent;
    border: transparent;
    position: fixed;
    left: 0;
    opacity: 0;
    height: 100%;
    cursor: pointer;
}

.transposeColumn > div {
    width: 2rem;
    color: black;
    text-align: right;    
}

.capoColumn {
    padding-right: 1.3em;
    background-image: url(images/capo.svg);
    background-repeat: no-repeat;
    background-position: right;
    background-size: 1em;
    filter: invert(1);
    overflow-x: hidden;
    display: inline-flex;
}

.capoColumn > span {
    color: black;
    min-width: 1em;
    min-height: 1.1em;
}

.capoColumn > select {
    background: transparent;
    border: transparent;
    position: fixed;
    left: 0;
    opacity: 0;
    height: 100%;
    cursor: pointer;
}

.capoColumn > div {
    width: 2rem;
    color: black;
    text-align: right;
}

.authorColumn {
    padding-left: 0.2em;
    padding-right: 0.2em;
}

.typeColumn {
    padding-left: 0.2em;
}

@media screen and (max-width: 25rem) {
    .transposeColumn {
        display: none !important;
    }        
    .capoColumn {
        display: none !important;
    }        
}

@media (orientation: portrait) {
    .mainTable {
        flex-direction: column;
    }
    .mainTable div {
        flex-direction: row;
    }
    .mainTable div div {
        justify-content: center;
    }
    #swipe-handler div {
        justify-content: flex-start;
    }
    .editor {
        width: 100%;
        max-height: 100%;  
        height: unset !important;  
    }
    .chordpro-editor-canvas {
        max-height: 100%;
    }    
}
/* ... */

